--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "jquery": "^3.6.0",
         "sass": "^1.51.0",
         "slick-carousel": "^1.8.1"
+    },
+    "dependencies": {
+        "swiper": "^8.2.2"
     }
 }
